Fix: project subtitles wrapping incorrectly and inconsistent spacing

--- a/src/styles/project_links.css
+++ b/src/styles/project_links.css
@@ -20,10 +20,6 @@ ul {
   margin-left: -5px;
 }
 
-li > a {
-  padding: 3.5vh 0;
-}
-
 .project {
   display: flex;
 }
@@ -35,13 +31,11 @@ li > a {
 @media (min-width: 800px) {
   .projectPhoto {
     width: 50vw;
-    margin: 1em 0;
   }
 }
 
 @media (max-width: 799px) {
   .projectPhoto {
-    margin: 1em 0;
     width: 102vw;
   }
   .project {
